Changes in 4.5.0

1)  Allow control over how the Mark is used.

2)  Generate warning on <macro>/<param>.

3)  Add a new optimization option.

4)  Combine identical logging chains.

5)  Added ACCOUNTING and DYNAMIC_BLACKLIST options.

