@@ -10,4 +10,7 @@ Changes in 4.5.0
 
 5)  Added ACCOUNTING and DYNAMIC_BLACKLIST options.
 
+6)  Don't unconditionally pass traffic from routemarked interfaces
+    through the tcpre chain.
+
 
